Added fss storage for unit tests.

--- a/project.cfg
+++ b/project.cfg
@@ -4,8 +4,9 @@ parts =
     zope2
     ploneproducts
     zopepy
-    zopeinstance
+    instance
     fss
+    fss-unittests
     test
 
 develop = .
@@ -36,12 +37,12 @@ url = ${plone:zope2-url}
 
 [zopepy]
 recipe = zc.recipe.egg
-eggs = ${zopeinstance:eggs}
+eggs = ${instance:eggs}
 interpreter = zopepy
 extra-paths = ${zope2:location}/lib/python
 scripts = zopepy
 
-[zopeinstance]
+[instance]
 recipe = plone.recipe.zope2instance
 zope2-location = ${zope2:location}
 user = admin:admin
@@ -59,9 +60,26 @@ products =
 [fss]
 recipe = iw.recipe.fss
 zope-instances =
-    ${zopeinstance:location}
+    ${instance:location}
 storages =
     default /
+
+[fss-unittests]
+# You need this for unit testing iw.fss
+recipe = iw.recipe.cmd:py
+on_install = true
+on_update = true
+cmds =
+    >>> import os
+    >>> def safe_makedirs(path):
+    ...     if not os.path.isdir(path):
+    ...         os.makedirs(path)
+    ...     return
+    >>> instance_dir = '${instance:location}'
+    >>> storage_dir = os.path.join(instance_dir, 'var', 'fss_storage')
+    >>> safe_makedirs(storage_dir)
+    >>> backup_dir = os.path.join(instance_dir, 'var', 'fss_backup')
+    >>> safe_makedirs(backup_dir)
 
 [test]
 recipe = zc.recipe.egg
@@ -72,7 +90,7 @@ eggs =
     plone.recipe.zope2instance
 extra-paths =
     ${zope2:location}/lib/python
-    ${zopeinstance:location}/lib/python
+    ${instance:location}/lib/python
 entry-points =
     test=plone.recipe.zope2instance.ctl:main
-arguments = ["-C", "${zopeinstance:location}/etc/zope.conf", "test", "-m", "${buildout:package}", "--keepbytecode"]
+arguments = ["-C", "${instance:location}/etc/zope.conf", "test", "-m", "${buildout:package}", "--keepbytecode"]
